kubernetes/postgres-statefulset.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:

  name: postgres

  namespace: bankops

spec:

  serviceName: postgres

  replicas: 1

  selector:

    matchLabels:

      app: postgres

  template:

    metadata:

      labels:

        app: postgres

    spec:

      containers:

      - name: postgres

        image: postgres:17

        ports:

        - containerPort: 5432

        volumeMounts:

        - name: postgres-storage

          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:

  - metadata:

      name: postgres-storage

    spec:

      accessModes:

      - ReadWriteOnce

      resources:

        requests:

          storage: 2Gi
