kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: bankops-network

  namespace: bankops

spec:

  podSelector:

    matchLabels:

      app: bankops

  policyTypes:

  - Ingress

  - Egress

  ingress:

  - from:

    - podSelector: {}

  egress:

  - {}
